apps/k3s/immich/immich-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-redis
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-redis
  template:
    metadata:
      labels:
        app: immich-redis
    spec:
      nodeSelector:
        worker: "true"
      containers:
        - name: immich-redis
          image: docker.io/redis:6.2-alpine
          resources:
            requests:
              cpu: 125m
              memory: 125M
            limits:
              cpu: 500m
              memory: 1G
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: immich-redis
  namespace: immich
spec:
  selector:
    app: immich-redis
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
